--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--[if lt IE 9]>
     <script type="application/javascript" src="scripts/vendors/html5-shim.min.js"></script>
     <script type="application/javascript" src="scripts/vendors/es5-shim.min.js"></script>
