--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <script type="application/javascript" src="scripts/vendors/html5-shim.min.js"></script>
     <script type="application/javascript" src="scripts/vendors/es5-shim.min.js"></script>
     <![endif]-->
-
     <meta charset="UTF-8">
     <link rel="stylesheet/less" type="text/css" href="styles/main.less"/>
     <!-- attention bien mettre les styles less avant le script -->
@@ -14,8 +13,15 @@
     <title></title>
 </head>
 <body>
-    <header>
-        <h1>Hello LESS quick start !</h1><h2>Go for some less with bootstrap !</h2>
-    </header>
+<header>
+    <nav>
+        <h1>Hello LESS quick start !</h1>
+        <a href="#">Home</a>
+        <a href="#">Premier Liens</a>
+        <a href="#">Second Liens</a>
+        <a href="#">Troisème Liens</a>
+        <a href="#">Dernier Liens</a>
+    </nav>
+</header>
 </body>
 </html>
